--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                     </li>
                 </ul>
                 <div class="ms-3">
+                    <a href="sign up.html">
+
                     <button class="btn btn-danger">Sign In</button>
+                    </a>
                 </div>
             </div>
         </div>
